--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>StaticPages#contact</h1>
-<p>Find me in app/views/static_pages/contact.html.erb</p>
+<h1>Contact</h1>
+<p>M.Nasseri</p>
+<p>Adress: Frankfurt</p>
+<p>Tel: 069 1232533</p>
+
