--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+li {
+	font-weight: bold;
+	color: red;
+	background-color: yellow;
+	display: inline-block
+}
+
+.my-image {
+	margin: auto;
+	text-align: center;
+	border: 2px solid black
+}
